@@ -101,7 +101,7 @@ void vt_pty_ssh_set_use_auto_reconnect(int flag);
 #endif
 
 #ifdef USE_WIN32API
-void vt_pty_ssh_set_pty_read_trigger(void (*func)(void));
+void vt_pty_set_pty_read_trigger(void (*func)(void));
 #endif
 
 #endif
